# fenrix-synthetic-data

./: .gitignore  AGENTS.md  README.md  cleanup_report.md  cleanup_stash_inventory.txt  opencode.jsonc  pyproject.toml
.github/workflows/: ci.yml
configs/: campaign.yaml  companies.csv  company.yaml.template  entity_labels.yaml  professor_bundle.fixture.yaml  professor_bundle.production.example.yaml  project_contract.yaml
configs/examples/: company_identity.example.yaml
configs/policies/: adversarial_review_v1.yaml  metrics_privacy_v1.yaml  pilot_v1.yaml  s3b-mvp-v1.json
configs/templates/: source_companies.example.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  LIGHTNING_AI_RUNBOOK.md  SOURCE_PROVENANCE.md  V3_1_ARTIFACT_QUALITY_AUDIT.md  V3_1_FINAL_REPORT.md  V3_2_FINAL_REPORT.md  V3_2_PREEXISTING_TEST_FAILURES.md  V3_3_FINAL_REPORT.md  V3_ARCHITECTURE_AUDIT.md  V3_DEPENDENCY_RESOURCE_PLAN.md  V3_FINAL_PRODUCTION_CANDIDATE_REPORT.md  V3_PHASE2_RELEASE_BOUNDARY.md  V3_PHASE4_PEER_ARCHETYPE.md  V3_PHASE5_ARCHIVE_AND_NUMERIC_TRANSFORM.md  V3_PHASE5_NEWS_RECONSTRUCTION_PLAN.md  V3_PHASE8C_FINAL_VALIDATION.md  V3_PHASE8_LLM_AND_NEWS_REVIEW.md  branch_cleanup_execution_2026-06-21.md  cleanup_report_update.md  colab_quickstart.md  phase4_runbook.md  post_merge_branch_cleanup_2026-06-21.md  professor_bundle_pr1.md  project_contract.md  release_criteria.md  submission_closeout_2026-06-21.md  threat_model.md
notebooks/: FENRIX_MultiCompany_Anonymization.ipynb  FENRIX_MultiCompany_Anonymization_Reproducible.ipynb
scripts/: build_submission_fast.py  colab_phase3c_smoke.py
src/fenrix_synthetic/: __init__.py  cli.py  cli_errors.py  cli_s3.py  submission_fast.py  submission_nvidia.py  submission_package.py  submission_quality.py  submission_sources.py
tests/: conftest.py
tests/fixtures/: canary_document.md  clean_document.md  test_company.yaml
tests/integration/: test_c001_demo.py  test_classroom_gate_seeded_failures.py  test_live_llm_provider_configuration.py  test_live_sec_smoke.py  test_masking_pipeline.py  test_phase2a_fixture_regression.py  test_phase2a_production_slice_blocks_honestly.py  test_phase2b_gate_adversarial_review.py  test_phase2b_gate_metrics_privacy.py  test_phase4_vertical_slice.py  test_production_bundle_full_e2e.py  test_production_bundle_mode_separation.py  test_professor_bundle_filing_reconstruction_stage.py  test_professor_bundle_fixture_build.py  test_professor_bundle_llm_blind_guess_stage.py  test_professor_bundle_news_reconstruction_stage.py  test_professor_bundle_numeric_transform_stage.py  test_professor_bundle_peer_archetype_stage.py  test_professor_bundle_strict_release_boundary.py  test_professor_bundle_trajectory_stage.py  test_professor_bundle_utility_preservation_stage.py
tests/unit/: test_accounting_sanity.py  test_archive_ingest.py  test_artifact_quality_gate.py  test_atlas_builder.py  test_atomic.py  test_build_submission_fast.py  test_case_insensitive_masking.py  test_checkpoints.py  test_checksums.py  test_classroom_numeric.py  test_classroom_package.py  test_cli.py  test_colab_provenance.py  test_colab_reproducible_notebook.py  test_config.py  test_hashing.py  (+80 more)
(+189 files in other folders)
