[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenrix-synthetic"
version = "0.1.0"
description = "FENRIX Synthetic Data Worker - Reproducible financial data masking and re-identification testing"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "FENRIX Team", email = "team@fenrix.example"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "click>=8.1",
    "orjson>=3.9",
    "python-json-logger>=2.0",
    "pyarrow>=14.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
    "httpx>=0.28",
    "python-dotenv>=1.0",
] 

[project.optional-dependencies] 
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-socket>=0.8",
    "mypy>=1.8",
    "ruff>=0.1",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
]

local-ner = [
    "gliner==0.2.27",
]

submission = [
    "yfinance>=0.2",
]

[project.entry-points] 
console_scripts = { fenrix-synth = "fenrix_synthetic.cli:main" }

[project.urls]
Homepage = "https://github.com/Scott-Switzer/fenrix-synthetic-data"
Repository = "https://github.com/Scott-Switzer/fenrix-synthetic-data"
Issues = "https://github.com/Scott-Switzer/fenrix-synthetic-data/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by line-length)
    "B008",  # function calls in default argument
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# --disable-socket enforces the network-isolated CI guardrail via pytest-socket.
# Tests assert pytest-socket raises SocketBlockedError on outbound TCP/DNS.
addopts = "-v --tb=short --disable-socket"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "local_model: tests that require an installed GLiNER/torch model and locally-cached weights",
    "local_package: tests that require the gliner package to be installed but do not download weights",
]
